crates/ink/tests/ui/contract/fail/config-keep-attr-missing-arg.stderr
error: expected a string literal value for `keep_attr` ink! configuration argument
 --> tests/ui/contract/fail/config-keep-attr-missing-arg.rs:1:17
  |
1 | #[ink::contract(keep_attr)]
  |                 ^^^^^^^^^
